src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dhP0.5-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-maximized true\n    default-window-height { proportion 0.5; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1239 × 336, bounds: 1239 × 688, states: []

post-map configures:
size: 1239 × 336, bounds: 1239 × 688, states: []
size: 1239 × 336, bounds: 1239 × 688, states: [Activated]
